@@ -6,6 +6,7 @@ v6.0.7 Nov 26 2014
 . (kfsone) Removed 'pill' options from local command
 . (kfsone) Friendly message instead of crash when local finds no stars
 . (kfsone) Added "--ignore-unkown" (-i) to "import"
+. (kfsone) "import" with a filename of "-" will present an Open File dialog
 
 v6.0.6 Nov 25 2014
 . (kfsone) Issue#63 Trade calculator was not seeing some non-trade jumps
